Fixed text wrap around Exec. Committee photos for responsivity

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -155,6 +155,12 @@ h3.committee-title {
 		margin-left: 0;
 	}
 }
+.clear-after-images {
+	clear: both;
+	@include breakpoint(large) {
+		clear: none;
+	}
+}
 
 
 /*ACF Pro NAACP Resources dpc*/
